--- a/portforlio.html
+++ b/portforlio.html
@@ -36,9 +36,9 @@
                 </p>
                 <h4>Join me to explore the world of Information Technology</h4>
                 <div class="social-media">
-                    <a href="#"><img src="images&logos\facebook.png" alt="Facebook"></a>
-                    <a href="#"><img src="images&logos/instagram.png" alt="Instagram"></a>
-                    <a href="#"><img src="images&logos/github.png" alt="GitHub"></a>
+                    <a href="ttps://www.facebook.com/nerjie.angelo.mecantina.2024"><img src="images&logos\facebook.png" alt="Facebook"></a>
+                    <a href="https://www.instagram.com/chanporadong_hilaw/"><img src="images&logos/instagram.png" alt="Instagram"></a>
+                    <a href="https://github.com/Eijjj"><img src="images&logos/github.png" alt="GitHub"></a>
 
                 </div>
             </div>    
@@ -151,7 +151,7 @@
                 <p><strong>Social:</strong></p>
                 <div class="social-links">
                     <a href="https://www.facebook.com/nerjie.angelo.mecantina.2024"><img src="images&logos/facebook.png" alt="Facebook"></a>
-                    <a href="images&logos/github.png"><img src="images&logos/github.png" alt="GitHub"></a>
+                    <a href="https://github.com/Eijjj"><img src="images&logos/github.png" alt="GitHub"></a>
                     <a href="https://www.instagram.com/chanporadong_hilaw/"><img src="images&logos/instagram.png" alt="Instagram"></a>
                 </div>
             </div>
